# tscompiler

./: README.md  output.ts  tscompiler.cabal
src/: Main.hs
